# acesHubo

./: .gitignore  template.txt
cmake/: CMakeLists.txt  aces.cmake  aces.pc.in
cmake/common/: .CMakeLists.txt.swp  CMakeLists.txt
cmake/config/: FindOrocos.cmake  FindWebots.cmake  component_rules.cmake
cmake/dispatcher/: CMakeLists.txt
cmake/minihubo/: CMakeLists.txt
cmake/testsuite/: CMakeLists.txt
cmake/webots/: CMakeLists.txt
docs/: Doxyfile  HUBO2_CANprotocol.xls  conventions.txt  modelPhysProps.xls
docs/datasheets/: nicinfo
docs/diagrams/: DataFlow.dia  DataFlow.eps  controller.dia  controller.eps  controller2.dia  device.dia  device.eps  prog_struct2.eps  protocol.eps  protocol_us.eps  state.dia  state.eps
docs/eapsi-presentation/: PIDClass.cpp  crtl.eps  crtl2.eps  logger.eps  pidclass.eps  pidmod.mdl  prog-struct.dia  prog-struct.eps  protocol.dia  state.eps
docs/iros2011/: .iros2011.latex.swp  iros2011.latex  makefile  notes  sources.bib
docs/iros2011/src/: log1.eps
example/eng_mat/: engdemo.c  engdemo.cpp  env.sh  makefile  matcreat.cpp
example/oclHello/: makefile  ocl_streamer.cpp  test_env.sh
example/ostream_test/: a.out  c1.cpp  c1.hpp  c2.hpp  ostream.overload.ex
extradoc/: mcl.txt  modelPhysProps.xls
extradoc/diagrams/: DataFlow.dia  DataFlow.eps  device.dia  device.eps  logger.dia  prog-struct.dia  prog-struct2.dia  prog_struct.eps  protocol.dia  protocol_us.dia
extradoc/eapsi-presentation/: ctrl-soft-outline.ppt  protocol.eps
extradoc/iros2011/: sources.bib
hist/logs/: testlog1.txt  testlog2.txt
hist/old_controllers/: controller1.cpp  controller2.cpp  controller3.cpp
hist/pyDraft/: ctrl-table  extInt.py  extIntTest.py  generic.py  generics_unit.py  pololu.py  robotis.py
matlab/: cascadedMovingAverage.m  cascadedMovingAverage_fast.m  huboArmSlowMove.m
notes/: rtt-windows.txt
notes/test_logs/t1/: desc  log1.fig  tfile.txt
notes/test_logs/t2/: desc  feet.txt  imu.txt  tfile.txt  tfile2.txt  tfile3.txt
orocosScripts/: launcher.xml  omnibot.ops  robotistest.ops
orocosScripts/TN/: zero.ops
orocosScripts/hubo/: 100hz1-2.txt  500hz.txt  danscriptHandWave.ops  danscriptHandWaveR1.ops  huboConfig.ops  huboDriver.ops  huboDriver2.ops  hubovia.ops  zero.txt
orocosScripts/mini/: mini-hubo-1.ops  mini-hubo-2.ops
orocosScripts/testsuite/: testscript.scp  testsuite.ops  testsuite50.ops
orocosScripts/virtual/: hubo-webots.ops  minihubo-webots-walk.ops  minihubo-webots-wave.ops
orocosScripts/walkPatterns/: test11.txt  test5.txt  test8.txt
src/: chardev.hpp  controller.cpp  controller.hpp  credentials.cpp  credentials.hpp  device.cc  device.cpp  device.hpp  dispatcher.cpp  dispatcher.hpp  dispatcher_old.hpp  draft1.proj  env.sh  filter.cc  filter.hpp  goal.cpp  goal.hpp  hardware.cc  hardware.cpp  hardware.hpp  launcher.cpp  launcher.xml  logger.cpp  logger.hpp  makefile  message.cpp  message.hpp  minihubo.cpp  minihubo.hpp  parameter.cpp  parameter.hpp  protocol.cc  protocol.cpp  protocol.hpp  pvalue.cpp  pvalue.hpp  robotis.cpp  robotis.hpp  robotis.l  robotisTypes.hpp  (+20 more)
src-conductor/: .cproject  .project  CMakeLists.txt  controller.cpp  controller.hpp  credentials.hpp  device.cc  device.cpp  device.hpp  dispatcher.cpp  dispatcher.hpp  hardware.cpp  launcher.cpp  logger.hpp  minihubo.cpp  minihubo.hpp  protocol.cpp  robotis.cpp  robotis.hpp  robotisTypes.hpp  taskcfg.hpp  webots.hpp
src-conductor/3dx/: makefile  xdevelop.tgz  xdrvlib.c
src-conductor/flexscanner/: CMakeLists.txt  flexscanner.hpp
src-conductor/flexscanner/adc/: adcDS.cpp  lex.adc.cc
src-conductor/flexscanner/robotis/: robotis.yy.cpp  robotisDS.hpp
src-conductor/hubo/: can4linux.h  hubo.cpp  hubo.hpp  huboCanDS.cpp  huboTxPacket.hpp  huboVia.hpp
src-conductor/omnibot/: makefile
src-conductor/state/: state.cc  state.cpp  state.hpp
src/flexparser/: packet.cpp  packet.hpp  robotis.l
src/flexparser/adc/: adc.l  adcDS.hpp  makefile
src/flexscanner/: flexscanner.cc  flexscanner.hpp
src/flexscanner/adc/: adc.l  adcDS.cpp  adcDS.hpp  adcFlex.hpp  makefile  sampleADCdata.txt
src/flexscanner/dev1/: makefile  packet.cpp  packet.hpp  testin  (+2 more)
src/hubo/: .hubo.cpp.swp  .hubo.hpp.swp  .huboCanDS.hpp.swp  hubo.cpp  hubo.hpp  huboCanDS.cpp  huboCanDS.hpp  huboTxPacket.cpp  huboTxPacket.hpp  huboVia.cpp  huboVia.hpp
src/ik/: diag.c  diag.h  max.c  max.h  miniForwardKinematics.c  miniForwardKinematics.h  miniIKSolve.c  miniIKSolve.h  miniIKSolve_initialize.c  miniIKSolve_initialize.h  miniIKSolve_terminate.c  miniIKSolve_terminate.h  miniIKSolve_types.h  miniJacobian.c  miniJacobian.h  norm.c  norm.h  rdivide.c  rdivide.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_MAXd_snf.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  svd.c  svd.h
src/omnibot/: omnibot.cpp  omnibot.hpp  spaceball.m
src/orocosScripts/: acesIP.ops  danscript.ops.pre.bk  danscript2.ops  example.ops  hubo-webots.ops  hubovia.ops  hubovia2.ops  launch.ops  mini-hubo-1.ops  mini-hubo-2.ops  mini-hubo-3.ops  mini-hubo-dasl.ops  mini-hubo-sins.ops  miniSM.osd  minihubo-webots-walk.ops  minihubo-webots-wave.ops  omnibot.ops  pid.ops  robotistest.ops  testprog.ops  testsuite.ops  userscript.ops  webots.ops
src/state/: matlab.hpp  state.cc  state.cpp  state.hpp
src/test/: acesIP.cpp  credeq.cpp  hubotest1.cpp  robotistest.cpp  scripttest.cpp  testsuite.cpp  typeof.cpp  userProg.cpp  userSM.cpp  wbtest.cpp
utils/: aces-cmakelists  backend-run-env.sh  env.sh  gnuPlotter.pl  importLogger.m  install.sh  remote-env.sh  rtt.cmake  run-env.sh
utils/matlabIO/: cmdState.m  initState.m  matiotest.m  readState.m  sampleState.m  test.m
utils/pythonIO/: readState.py
utils/testTools/: IKscript1.txt
utils/tobin/: env.sh  makefile  test.sh  toascii.c  tobin.c
webots/: restoremac-thor.sh  restoremac.sh  webots-physics.txt  webots-physics2.txt  webots-physics3.txt  webotsmac.sh
webots/holeNpeg/: hole.ipt  holeN2peg.iam  holeN2peg.wrl  holeNpeg.iam  holeNpeg.wrl  peg.ipt
webots/leg/: good6.wbt  leg.wrl  leg2.wrl  servo.wbt  servo2.wbt
webots/worlds/: README  hoap2_walk.wbt
(+95 files in other folders)
